k8s/alb-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
      - name: alb-ingress-controller
        args:
        - --ingress-class=alb
        - --cluster-name=elk
        - --aws-vpc-id=vpc-01a4229925460144f
        - --aws-region=ap-southeast-2
        image: docker.io/amazon/aws-alb-ingress-controller:v1.1.6
      serviceAccountName: aws-load-balancer-controller
